tests/machine/x/fortran/substring_builtin.f90
program main
  implicit none
  print *, substring("mochi",1,4)
end program main
